<?xml version="1.0"?>
<package format="2">
  <name>mr_slam</name>
  <description>rospy node for graph-SLAM using g2opy backend</description>
  <version>0.0.0</version>
  <license>Unlicensed</license>

  <maintainer email="jared.c.heath.17@dartmouth.edu">Jared Heath</maintainer>
  <maintainer email="karim.k.itani.20@dartmouth.edu">Karim Itani</maintainer>

  <author email="jared.c.heath.17@dartmouth.edu">Jared Heath</author>
  <author email="karim.k.itani.20@dartmouth.edu">Karim Itani</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
