<?xml version="1.0"?>
<package format="2">
  <name>heath_pd1_pubsub</name>
  <version>0.0.1</version>
  <license>Unlicensed</license>

  <description>Nodes for simple pub/sub behavior with rospy</description>

  <maintainer email="jared.c.heath.17@dartmouth.edu">Jared Heath</maintainer>
  <author email="jared.c.heath.17@dartmouth.edu">Jared Heath</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
